[project]
name = "sales_forecasting_project"
version = "0.1.0"
description = "Walmart Sales Forecasting Project"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "mlflow>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.23",
    "streamlit>=1.27",
    "lightgbm>=4.4",
    "xgboost>=1.7",
    "catboost>=1.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sales_forecasting_project*"]